@@ -100,6 +100,9 @@ RELEASE 0.97 - XXX
   - Print an internal Python stack trace in response to an otherwise
     unexplained error when --debug=stacktrace is specified.
 
+  - Add a --debug=findlibs option to print what's happening when
+    the scanner is searching for libraries.
+
   From Chris Pawling:
 
   - Have the linkloc tool use $MSVS_VERSION to select the Microsoft
